--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Register for Full Stack Conf</title>
-	<link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="container">
@@ -33,7 +34,8 @@
           <option value="designer">Designer</option>          
           <option value="student">Student</option>
           <option value="other">Other</option>  
-        </select>           
+        </select> 
+        <input type="text" name="job_role_other" placeholder="Your Job Role" id="other-title">         
       </fieldset>
       
       <fieldset class="shirt">
@@ -149,6 +151,8 @@
       
     </form>
 
-	</div>
+  </div>
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
